Fixing some text contrast

--- a/final/styles/styles.css
+++ b/final/styles/styles.css
@@ -298,5 +298,5 @@ ul {
 }
 
 .red-text {
-    color: red;
+    color: rgb(255, 0, 0);
 }
